test/tests/stages/16_characters_and_strings/invalid_parse/string_literal_varname.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  string literal("x")
  =
  const int(0)
  ;
  return
  const int(0)
  ;
  }
